# ranger_object_finder

./: .gitignore  .sops.yaml  Cargo.toml  armgrabbycode.ino  cabal.project  cabal.project.freeze  flake.nix  reach_forwards.ino  run_object_recognition.sh
DEMO/: launch_demo.sh
SDPApp/: settings.gradle.kts
SDPApp/app/: build.gradle.kts
SDPApp/app/src/main/: AndroidManifest.xml  AndroidManifest.xml~
SDPApp/app/src/main/res/drawable/: home_button_foreground.xml
SDPApp/app/src/main/res/menu/: bottom_nav_menu.xml
SDPApp/app/src/main/res/mipmap-anydpi-v26/: rangerletters_round.xml
SDPApp/app/src/main/res/values/: strings.xml  themes.xml
SDPApp/app/src/main/res/xml/: provider_paths.xml
SDPApp/gradle/: libs.versions.toml
SDPApp/gradle/wrapper/: gradle-wrapper.properties
motor/: .gitkeep
pkgs/: simpleble.nix
ranger-daemon/: cabal.project  project.nix  ranger-daemon.cabal
ranger-daemon-ffi-test/: main.c  package.nix
ranger-daemon-rs/: Cargo.toml
ranger-daemon-rs/src/: main.rs  ranger_bluetooth.rs
ranger-daemon/app/: Client.hs  Main.hs
ranger-daemon/cbits/: ranger_types.h  simpleble_wrappers.c  simpleble_wrappers.h
ranger-daemon/src-raw-bindings/Ranger/Bluetooth/SimpleBLE/: Raw.hs
ranger-daemon/src-raw-bindings/Ranger/Bluetooth/SimpleBLE/Raw/: Types.hsc
ranger-daemon/src/Ranger/: Bluetooth.hs  CApi.hs  Demo.hs  Effect.hs  Types.hs
ranger-daemon/src/Ranger/Bluetooth/: Gatt.hs  Msg.hs  Protocol.hs  SimpleBLE.hs  SimpleBLE.hsc  Types.hs
ranger-daemon/src/Ranger/Bluetooth/SimpleBLE/: Raw.hs  Types.hsc
ranger-daemon/src/Ranger/Bluetooth/SimpleBLE/Raw/: Types.hsc
ranger-daemon/src/Ranger/CApi/: Types.hsc
ranger-daemon/test/: Main.hs
ranger-daemon/test/ranger-daemon/: Main.hs
ranger-daemon/test/simpleble/: Main.hs
ranger-daemon/test/simpleble/cbits/: simpleble_example.c
ranger-nixos/: README.md  sdp.nix  wifi.nix
ranger-nixos/secrets/: wpa_supplicant.conf
ranger_nav/: imu.py  launch_nav.sh  slam_command
ranger_nav/motor/: encoder.py  imu.py  motor_code.py
ranger_nav/ros_ws/install/: local_setup.sh  setup.sh
ranger_nav/ros_ws/install/hls_lfcd_lds_driver/lib/hls_lfcd_lds_driver/: hlds_laser_publisher
ranger_nav/ros_ws/install/hls_lfcd_lds_driver/share/hls_lfcd_lds_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
ranger_nav/ros_ws/install/ld08_driver/lib/ld08_driver/: ld08_driver
ranger_nav/ros_ws/install/ld08_driver/share/ld08_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
ranger_nav/ros_ws/install/movement_controller/lib/movement_controller/: odom_publisher
ranger_nav/ros_ws/install/movement_controller/share/movement_controller/: launch_nav.sh  package.dsv  package.sh  package.xml
ranger_nav/ros_ws/install/openslam_gmapping/share/openslam_gmapping/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ranger_nav/ros_ws/install/ranger_nav/lib/ranger_nav/: ranger_nav
ranger_nav/ros_ws/install/ranger_nav/share/ranger_nav/: package.dsv  package.sh  package.xml  ranger_nav.launch.py
ranger_nav/ros_ws/install/slam_gmapping/lib/slam_gmapping/: slam_gmapping
ranger_nav/ros_ws/install/slam_gmapping/share/slam_gmapping/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
ranger_nav/ros_ws/log/: latest_build
ranger_nav/ros_ws/src/movement_controller/: setup.py
ranger_nav/ros_ws/src/movement_controller/launch/: nav_launch.py
ranger_nav/ros_ws/src/movement_controller/movement_controller/: odom_publisher.py
ranger_nav/ros_ws/src/ranger_nav/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ranger_nav/ros_ws/src/ranger_nav/launch/: ranger_nav.launch.py
ranger_nav/ros_ws/src/ranger_nav/ranger_nav/: ranger_nav.py
ranger_object_recognition/: ._mobilenet-v3-tensorflow2-small-075-224-feature-vector-v1  .gitignore  README  README.md  __init__.py  arduino_connection.py  camera_integration.py  config.py  coordinates.py  data.yaml  detect.py  feature_extractor.py  feature_extractor_int8.tflite  image_capture.py  image_queue_processor.py  image_recog_integration.py  image_utils.py  integration.py  integrator.py  matching.py  measurements.py  or_utils.py  package.nix  proposals.py  queue_worker.py  requirements.txt  serial  setup.py  utils.py  visualisation.py  visualisor.py
ranger_object_recognition/mobilenet-v3-tensorflow2-small-075-224-feature-vector-v1/: ._variables  saved_model.pb
ranger_object_recognition/mobilenet-v3-tensorflow2-small-075-224-feature-vector-v1/variables/: variables.data-00000-of-00001  variables.index
ranger_object_recognition/utils/: general.py
ros_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_ws/install/hls_lfcd_lds_driver/lib/hls_lfcd_lds_driver/: hlds_laser_publisher
ros_ws/install/hls_lfcd_lds_driver/share/hls_lfcd_lds_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
ros_ws/install/hls_lfcd_lds_driver/share/hls_lfcd_lds_driver/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  (+2 more)
ros_ws/install/openslam_gmapping/share/openslam_gmapping/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
ros_ws/install/slam_gmapping/share/slam_gmapping/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros_ws/log/: latest_build
ros_ws/src/slam_test/: package.xml  setup.cfg  setup.py
(+134 files in other folders)
