[package]
name = "ranger-daemon-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bluer = { version = "0.17.3", features = ["full"] }
clap = { version = "4.5.28", features = ["derive"] }
env_logger = "0.11.6"
futures = "0.3"
log = "0.4.25"
ros2-client = { version = "0.8.0", features = ["pre-iron-gid"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
uuid = { version = "1.13.1", features = ["v3", "v8"] }
