cabal-version:      3.8
name:               ranger-daemon
version:            0.1.0.0
-- synopsis:
-- description:
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             ryndubei
maintainer:         114586905+ryndubei@users.noreply.github.com
-- copyright:
category:           System
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Ranger.Effect
                    , Ranger.Demo
                    , Ranger.Bluetooth
                    , Ranger.Bluetooth.Gatt
                    , Ranger.Bluetooth.Msg
                    , Ranger.Bluetooth.Protocol
                    , Ranger.Bluetooth.Types
    -- other-modules:
    -- other-extensions:
    build-depends:   base ^>=4.14.0.0
                   , async 
                   , ble
                   , bytestring
                   , cereal
                   , conduit
                   , effectful
                   , effectful-th
                   , hslogger
                   , singletons == 2.7
                   , stm
                   , sync-monad
                   , text
                   , transformers
                   , vector
    hs-source-dirs:   src

executable ranger-daemon
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:   base ^>=4.14.0.0
                   , ranger-daemon
    hs-source-dirs:   app
